# egui-opengl-internal

./: README.md  rust-toolchain.toml
egui-opengl-internal/: Cargo.toml
egui-opengl-internal/src/: app.rs  input.rs  lib.rs  utils.rs
egui-opengl-internal/src/shader/: mod.rs
example-wnd/: Cargo.toml
example-wnd/src/: lib.rs
